--- a/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.056383Z",
-     "start_time": "2025-07-26T06:30:12.051585Z"
+     "end_time": "2025-07-26T12:33:29.886469Z",
+     "start_time": "2025-07-26T12:33:29.327180Z"
     }
    },
    "source": [
@@ -26,7 +26,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.106741Z",
-     "start_time": "2025-07-26T06:30:12.098800Z"
+     "end_time": "2025-07-26T12:33:30.170946Z",
+     "start_time": "2025-07-26T12:33:30.161694Z"
     }
    },
    "cell_type": "code",
@@ -97,13 +97,13 @@
    ],
    "id": "643385d13f951946",
    "outputs": [],
-   "execution_count": 59
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.161333Z",
-     "start_time": "2025-07-26T06:30:12.156616Z"
+     "end_time": "2025-07-26T12:33:30.224640Z",
+     "start_time": "2025-07-26T12:33:30.219312Z"
     }
    },
    "cell_type": "code",
@@ -113,7 +113,7 @@
    ],
    "id": "22782e538a273616",
    "outputs": [],
-   "execution_count": 60
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -124,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.224350Z",
-     "start_time": "2025-07-26T06:30:12.219453Z"
+     "end_time": "2025-07-26T12:33:30.251728Z",
+     "start_time": "2025-07-26T12:33:30.237136Z"
     }
    },
    "cell_type": "code",
@@ -138,7 +138,7 @@
    ],
    "id": "7cdadabf1b8538b3",
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -149,8 +149,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.300639Z",
-     "start_time": "2025-07-26T06:30:12.281044Z"
+     "end_time": "2025-07-26T12:33:30.359940Z",
+     "start_time": "2025-07-26T12:33:30.277793Z"
     }
    },
    "cell_type": "code",
@@ -263,7 +263,7 @@
      ]
     }
    ],
-   "execution_count": 62
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -284,8 +284,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.373850Z",
-     "start_time": "2025-07-26T06:30:12.349358Z"
+     "end_time": "2025-07-26T12:33:30.411317Z",
+     "start_time": "2025-07-26T12:33:30.376839Z"
     }
    },
    "cell_type": "code",
@@ -345,7 +345,7 @@
      ]
     }
    ],
-   "execution_count": 63
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -356,8 +356,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.438586Z",
-     "start_time": "2025-07-26T06:30:12.420243Z"
+     "end_time": "2025-07-26T12:33:30.472825Z",
+     "start_time": "2025-07-26T12:33:30.447060Z"
     }
    },
    "cell_type": "code",
@@ -437,7 +437,7 @@
      ]
     }
    ],
-   "execution_count": 64
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -467,8 +467,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.522023Z",
-     "start_time": "2025-07-26T06:30:12.488277Z"
+     "end_time": "2025-07-26T12:33:30.562868Z",
+     "start_time": "2025-07-26T12:33:30.512134Z"
     }
    },
    "cell_type": "code",
@@ -527,7 +527,7 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -551,8 +551,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:32:12.558673Z",
-     "start_time": "2025-07-26T06:32:12.535548Z"
+     "end_time": "2025-07-26T12:33:30.604324Z",
+     "start_time": "2025-07-26T12:33:30.582264Z"
     }
    },
    "cell_type": "code",
@@ -602,7 +602,7 @@
      ]
     }
    ],
-   "execution_count": 71
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -613,8 +613,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:12.631496Z",
-     "start_time": "2025-07-26T06:30:12.624210Z"
+     "end_time": "2025-07-26T12:33:30.699742Z",
+     "start_time": "2025-07-26T12:33:30.692290Z"
     }
    },
    "cell_type": "code",
@@ -632,7 +632,7 @@
    ],
    "id": "921a4b0f9b91c935",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -643,8 +643,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:25:36.006942Z",
-     "start_time": "2025-07-26T07:25:35.797869Z"
+     "end_time": "2025-07-26T13:08:46.422245Z",
+     "start_time": "2025-07-26T13:08:46.371326Z"
     }
    },
    "cell_type": "code",
@@ -661,54 +661,35 @@
     "    D = D_matrix()\n",
     "    r_iso = isoparametric_mapping()[0]  # r(R, Z) mapping\n",
     "\n",
-    "    # print('The constitutive matrix D is:')\n",
-    "    # sp.pprint(D)\n",
+    "    print('riso')\n",
+    "    print(r_iso)\n",
     "\n",
-    "    for i in range(NG):\n",
-    "        for p, w in zip(gi_data[NG]['point'], gi_data[NG]['weight']):\n",
-    "            r_gp, z_gp = p[0], p[1]  # Gauss point in natural coords\n",
+    "    for p, w in zip(gi_data[NG]['point'], gi_data[NG]['weight']):\n",
+    "        r_gp, z_gp = p[0], p[1]  # Gauss point in natural coords\n",
     "\n",
-    "            # Evaluate B, det(J), and r at the Gauss point\n",
-    "            B_evaluated = B_matrix.subs(physical_coords_map).subs({R: r_gp, Z: z_gp}).evalf()\n",
-    "            J_evaluated = J_substituted.subs({R: r_gp, Z: z_gp}).evalf()\n",
-    "            det_J = J_evaluated.det()\n",
-    "            r_physical_at_gp = r_iso.subs(physical_coords_map).subs({R: r_gp, Z: z_gp}).evalf()\n",
+    "        # Evaluate B, det(J), and r at the Gauss point\n",
+    "        B_evaluated = B_matrix.subs(physical_coords_map).subs({R: r_gp, Z: z_gp}).evalf()\n",
+    "        J_evaluated = J_substituted.subs({R: r_gp, Z: z_gp}).evalf()\n",
+    "        det_J = J_evaluated.det()\n",
+    "        r_physical_at_gp = r_iso.subs(physical_coords_map).subs({R: r_gp, Z: z_gp}).evalf()\n",
     "\n",
-    "            # Calculate the stiffness matrix contribution with the 2*pi*r term\n",
-    "            K_contribution = 2 * sp.pi * B_evaluated.T * D * B_evaluated * r_physical_at_gp * det_J * w\n",
-    "            K_lok += K_contribution\n",
+    "        # Calculate the stiffness matrix contribution with the 2*pi*r term\n",
+    "        K_contribution = 2 * sp.pi * B_evaluated.T * D * B_evaluated * r_physical_at_gp * det_J * w\n",
+    "        K_lok += K_contribution\n",
     "\n",
     "    return K_lok\n",
     "\n",
-    "# the full K matrix\n",
-    "print()\n",
-    "K_e = K_matrix()\n",
-    "print('The full stiffness matrix K is:')\n",
-    "sp.pprint(K_e.applyfunc(lambda x: round(x/1e12, 4)))\n",
-    "K_e = np.array(K_e).astype(np.float64)\n",
-    "\n",
-    "# 1. Berechnen Sie die Steifigkeitsmatrix mit NG=1\n",
     "NG = 1\n",
     "K1 = K_matrix()\n",
     "K1_np = np.array(K1).astype(np.float64)\n",
     "\n",
-    "# 2. Berechnen Sie die Steifigkeitsmatrix mit NG=3 (genauerer Wert)\n",
     "NG = 3\n",
     "K3 = K_matrix()\n",
     "K3_np = np.array(K3).astype(np.float64)\n",
     "\n",
-    "# 3. Berechnen Sie die relative Differenz mit der Frobenius-Norm\n",
-    "# np.linalg.norm(..., 'fro') berechnet die Frobenius-Norm\n",
-    "\n",
-    "norm_Ke = np.linalg.norm(K_e-K1_np, 'fro')\n",
-    "norm_K1 = np.linalg.norm(K1_np-K3_np, 'fro')\n",
-    "norm_K3 = np.linalg.norm(K_e-K3_np, 'fro')\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(norm_Ke)\n",
-    "print(norm_K1)\n",
-    "print(norm_K3)\n"
+    "print(np.round(K1_np/1e12, 4))\n",
+    "print()\n",
+    "print(np.round(K3_np/1e12, 4))\n"
    ],
    "id": "4c9fea9f9fdfec0b",
    "outputs": [
@@ -716,32 +697,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "riso\n",
+      "R*r2 + Z*r3 + r1*(-R - Z + 1)\n",
+      "R + 3\n",
+      "3.33333333333333\n",
+      "riso\n",
+      "R*r2 + Z*r3 + r1*(-R - Z + 1)\n",
+      "R + 3\n",
+      "3.16666666666667\n",
+      "R + 3\n",
+      "3.66666666666667\n",
+      "R + 3\n",
+      "3.16666666666667\n",
+      "[[ 6.8229  3.786  -5.5824 -1.6111 -1.7963 -2.1749]\n",
+      " [ 3.786   7.2498 -2.6583 -1.6111 -1.8527 -5.6388]\n",
+      " [-5.5824 -2.6583  6.1785  0.      0.298   2.6583]\n",
+      " [-1.6111 -1.6111  0.      1.6111  1.6111  0.    ]\n",
+      " [-1.7963 -1.8527  0.298   1.6111  1.6675  0.2417]\n",
+      " [-2.1749 -5.6388  2.6583  0.      0.2417  5.6388]]\n",
       "\n",
-      "The full stiffness matrix K is:\n",
-      "⎡6.8229    3.786   -5.5824  -1.6111  -1.7963  -2.1749⎤\n",
-      "⎢                                                    ⎥\n",
-      "⎢ 3.786   7.2498   -2.6583  -1.6111  -1.8527  -5.6388⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-5.5824  -2.6583  6.1785      0      0.298   2.6583 ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-1.6111  -1.6111     0     1.6111   1.6111      0   ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-1.7963  -1.8527   0.298   1.6111   1.6675   0.2417 ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎣-2.1749  -5.6388  2.6583      0     0.2417   5.6388 ⎦\n",
-      "0.0\n",
-      "39888828990581.21\n",
-      "39888828990581.21\n"
+      "[[ 6.8549  3.786  -5.5969 -1.6111 -1.8089 -2.1749]\n",
+      " [ 3.786   7.2498 -2.6583 -1.6111 -1.8527 -5.6388]\n",
+      " [-5.5969 -2.6583  6.2003  0.      0.2835  2.6583]\n",
+      " [-1.6111 -1.6111  0.      1.6111  1.6111  0.    ]\n",
+      " [-1.8089 -1.8527  0.2835  1.6111  1.6994  0.2417]\n",
+      " [-2.1749 -5.6388  2.6583  0.      0.2417  5.6388]]\n"
      ]
     }
    ],
-   "execution_count": 72
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T06:30:13.069926Z",
-     "start_time": "2025-07-26T06:30:13.060941Z"
+     "end_time": "2025-07-26T12:33:31.187037Z",
+     "start_time": "2025-07-26T12:33:31.173526Z"
     }
    },
    "cell_type": "code",
@@ -782,7 +772,7 @@
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 12
   }
  ],
  "metadata": {
