--- a/source/TwoD/Axissymmetric/axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:05:12.830895Z",
-     "start_time": "2025-07-26T12:05:12.067932Z"
+     "end_time": "2025-07-26T13:02:27.870548Z",
+     "start_time": "2025-07-26T13:02:27.330477Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:05:12.853633Z",
-     "start_time": "2025-07-26T12:05:12.844096Z"
+     "end_time": "2025-07-26T13:02:28.160408Z",
+     "start_time": "2025-07-26T13:02:28.151887Z"
     }
    },
    "cell_type": "code",
@@ -92,13 +92,13 @@
    ],
    "id": "52edc126770b2e52",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:05:12.884952Z",
-     "start_time": "2025-07-26T12:05:12.879411Z"
+     "end_time": "2025-07-26T13:02:28.191426Z",
+     "start_time": "2025-07-26T13:02:28.186637Z"
     }
    },
    "cell_type": "code",
@@ -108,7 +108,7 @@
    ],
    "id": "e0746910ae4ae4e9",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:05:13.790574Z",
-     "start_time": "2025-07-26T12:05:13.067025Z"
+     "end_time": "2025-07-26T13:02:28.681987Z",
+     "start_time": "2025-07-26T13:02:28.210705Z"
     }
    },
    "cell_type": "code",
@@ -146,17 +146,67 @@
     "        r3 - r2,\n",
     "        r1 - r3,\n",
     "        r2 - r1,\n",
-    "    ])\n",
-    "\n",
+    "    ])\n"
+   ],
+   "id": "d47a539ba577b9ea",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Area of the element",
+   "id": "faca72902543bfb"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-26T13:02:28.748065Z",
+     "start_time": "2025-07-26T13:02:28.694303Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# The double area of the triangle\n",
     "two_A = sp.Matrix([r1, r2, r3]).dot(beta())\n",
     "print('The value of two_A is:')\n",
     "sp.pprint(two_A.subs(physical_coords_map))\n",
     "\n",
-    "# this is an alternative way of calculating the area of the triangle\n",
-    "# using the determinant of the matrix formed by the coordinates of the nodes\n",
-    "Ae = sum(0.5 * alpha())\n",
+    "# The single area of the triangle\n",
+    "Ae = sum(0.5 * sp.Matrix(alpha()))\n",
     "print('The value of Ae is:')\n",
-    "sp.pprint(Ae.subs(physical_coords_map))\n",
+    "sp.pprint(Ae.subs(physical_coords_map))"
+   ],
+   "id": "35a7304aa8d88b13",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of two_A is:\n",
+      "1\n",
+      "The value of Ae is:\n",
+      "0.500000000000000\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-26T13:02:28.823027Z",
+     "start_time": "2025-07-26T13:02:28.764486Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "# # this is an alternative way of calculating the area of the triangle\n",
+    "# # using the determinant of the matrix formed by the coordinates of the nodes\n",
+    "# Ae = sum(0.5 * alpha())\n",
+    "# print('The value of Ae is:')\n",
+    "# sp.pprint(Ae.subs(physical_coords_map))\n",
     "\n",
     "def shape_functions():\n",
     "    _alpha = alpha()\n",
@@ -226,10 +276,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of two_A is:\n",
-      "1\n",
-      "The value of Ae is:\n",
-      "0.500000000000000\n",
       "Symbolic shape function for this element:\n",
       "⎡-R - Z + 4⎤\n",
       "⎢          ⎥\n",
@@ -258,7 +304,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -279,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:05:13.867470Z",
-     "start_time": "2025-07-26T12:05:13.837996Z"
+     "end_time": "2025-07-26T13:02:28.876492Z",
+     "start_time": "2025-07-26T13:02:28.851780Z"
     }
    },
    "cell_type": "code",
@@ -338,7 +384,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -352,8 +398,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:05:14.188543Z",
-     "start_time": "2025-07-26T12:05:13.932781Z"
+     "end_time": "2025-07-26T13:02:29.085221Z",
+     "start_time": "2025-07-26T13:02:28.917Z"
     }
    },
    "cell_type": "code",
@@ -429,7 +475,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -440,8 +486,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:05:14.280499Z",
-     "start_time": "2025-07-26T12:05:14.255205Z"
+     "end_time": "2025-07-26T13:02:29.157168Z",
+     "start_time": "2025-07-26T13:02:29.134243Z"
     }
    },
    "cell_type": "code",
@@ -491,7 +537,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -502,8 +548,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:05:14.384427Z",
-     "start_time": "2025-07-26T12:05:14.377325Z"
+     "end_time": "2025-07-26T13:02:29.217691Z",
+     "start_time": "2025-07-26T13:02:29.211120Z"
     }
    },
    "cell_type": "code",
@@ -521,7 +567,7 @@
    ],
    "id": "b6bcf4700332a080",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -532,8 +578,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:26:03.394092Z",
-     "start_time": "2025-07-26T12:26:03.253091Z"
+     "end_time": "2025-07-26T13:02:29.412616Z",
+     "start_time": "2025-07-26T13:02:29.269571Z"
     }
    },
    "cell_type": "code",
@@ -554,7 +600,7 @@
     "    z_map = N_map.dot(sp.Matrix([z1, z2, z3])).subs(physical_coords_map)\n",
     "\n",
     "    # Element area\n",
-    "    det_J = two_A.subs(physical_coords_map) / 2\n",
+    "    det_J = Ae.subs(physical_coords_map)\n",
     "\n",
     "    K = sp.zeros(ND * NNODE, ND * NNODE)\n",
     "\n",
@@ -601,8 +647,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.050650835037231445\n",
-      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.06522560119628906\n",
+      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.04690384864807129\n",
+      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.08118557929992676\n",
       "Stiffness matrix from 1-point Gauss quadrature (K_gauss_1pt):\n",
       "[[3.411447 1.893011 -2.791184 -0.805537 -0.898173 -1.087474]\n",
       " [1.893011 3.624915 -1.329135 -0.805537 -0.926367 -2.819378]\n",
@@ -630,13 +676,13 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T12:26:27.287563Z",
-     "start_time": "2025-07-26T12:26:24.257310Z"
+     "end_time": "2025-07-26T13:02:32.307097Z",
+     "start_time": "2025-07-26T13:02:29.490536Z"
     }
    },
    "cell_type": "code",
@@ -672,9 +718,9 @@
     "\n",
     "K_integrated_np = np.array(K_integrated).astype(np.float64)\n",
     "ratio = K_gauss_3pt / K_integrated_np\n",
-    "for i in range(ratio.shape[0]):\n",
-    "    for j in range(ratio.shape[1]):\n",
-    "        print(f'Element ({i},{j}):', round(ratio[i, j], 6))\n"
+    "# for i in range(ratio.shape[0]):\n",
+    "#     for j in range(ratio.shape[1]):\n",
+    "#         print(f'Element ({i},{j}):', round(ratio[i, j], 6))\n"
    ],
    "id": "2b891ea48d510442",
    "outputs": [
@@ -682,7 +728,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to calculate the stiffness matrix by double integration: 2.952200412750244\n",
+      "Time taken to calculate the stiffness matrix by double integration: 2.772909164428711\n",
       "The fully integrated stiffness matrix K is:\n",
       "⎡3.4274    1.893   -2.7986  -0.8055  -0.9043  -1.0875⎤\n",
       "⎢                                                    ⎥\n",
@@ -694,53 +740,20 @@
       "⎢                                                    ⎥\n",
       "⎢-0.9043  -0.9264  0.1416   0.8055   0.8497   0.1208 ⎥\n",
       "⎢                                                    ⎥\n",
-      "⎣-1.0875  -2.8194  1.3291      0     0.1208   2.8194 ⎦\n",
-      "Element (0,0): 0.0\n",
-      "Element (0,1): 0.0\n",
-      "Element (0,2): 0.0\n",
-      "Element (0,3): 0.0\n",
-      "Element (0,4): 0.0\n",
-      "Element (0,5): 0.0\n",
-      "Element (1,0): 0.0\n",
-      "Element (1,1): 0.0\n",
-      "Element (1,2): 0.0\n",
-      "Element (1,3): 0.0\n",
-      "Element (1,4): 0.0\n",
-      "Element (1,5): 0.0\n",
-      "Element (2,0): 0.0\n",
-      "Element (2,1): 0.0\n",
-      "Element (2,2): 0.0\n",
-      "Element (2,3): nan\n",
-      "Element (2,4): 0.0\n",
-      "Element (2,5): 0.0\n",
-      "Element (3,0): 0.0\n",
-      "Element (3,1): 0.0\n",
-      "Element (3,2): nan\n",
-      "Element (3,3): 0.0\n",
-      "Element (3,4): 0.0\n",
-      "Element (3,5): nan\n",
-      "Element (4,0): 0.0\n",
-      "Element (4,1): 0.0\n",
-      "Element (4,2): 0.0\n",
-      "Element (4,3): 0.0\n",
-      "Element (4,4): 0.0\n",
-      "Element (4,5): 0.0\n",
-      "Element (5,0): 0.0\n",
-      "Element (5,1): 0.0\n",
-      "Element (5,2): 0.0\n",
-      "Element (5,3): nan\n",
-      "Element (5,4): 0.0\n",
-      "Element (5,5): 0.0\n"
+      "⎣-1.0875  -2.8194  1.3291      0     0.1208   2.8194 ⎦\n"
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 12
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-26T13:02:32.392801Z",
+     "start_time": "2025-07-26T13:02:32.314083Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "\n",
     "def K_matrix_3():\n",
@@ -757,8 +770,7 @@
     "\n",
     "    D = D_matrix()  # the constitutive matrix\n",
     "\n",
-    "    _A = 0.5 * two_A.subs(physical_coords_map)\n",
-    "    _A = Ae.subs(physical_coords_map)\n",
+    "    _A = Ae.subs(physical_coords_map)  # element area\n",
     "\n",
     "    K = (B.T * D * B) * 2 * np.pi * mp[0] * _A\n",
     "\n",
@@ -770,10 +782,36 @@
     "print(\"The stiffness matrix K_3 for this element:\")\n",
     "sp.pprint(K_e_formatted)"
    ],
-   "id": "384c3369194ff987"
+   "id": "384c3369194ff987",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The stiffness matrix K_3 for this element:\n",
+      "⎡3.4114    1.893   -2.7912  -0.8055  -0.8982  -1.0875⎤\n",
+      "⎢                                                    ⎥\n",
+      "⎢ 1.893   3.6249   -1.3291  -0.8055  -0.9264  -2.8194⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-2.7912  -1.3291  3.0892      0      0.149   1.3291 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-0.8055  -0.8055     0     0.8055   0.8055      0   ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-0.8982  -0.9264   0.149   0.8055   0.8337   0.1208 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎣-1.0875  -2.8194  1.3291      0     0.1208   2.8194 ⎦\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-26T13:02:32.549764Z",
+     "start_time": "2025-07-26T13:02:32.540343Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# the stiffness matrix as a numpy array\n",
@@ -800,8 +838,19 @@
     "    print()"
    ],
    "id": "974b1fe355981d1a",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The eigenvalues of the stiffness matrix K are:\n",
+      "[1e-05, 0.00094, 62602593973.32908, 2130987346601.4143, 3222146311374.145, 9168503489908.346]\n",
+      "The eigenvectors for the near-zero eigenvalues are:\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   }
  ],
  "metadata": {
