isoparametric works well for the quad element, is off by x2 for the tri. Other than that, they are OK.

--- a/source/TwoD/Axissymmetric/tri_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/tri_axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:27.870548Z",
-     "start_time": "2025-07-26T13:02:27.330477Z"
+     "end_time": "2025-07-26T14:11:23.499858Z",
+     "start_time": "2025-07-26T14:11:22.808270Z"
     }
    },
    "source": [
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:28.160408Z",
-     "start_time": "2025-07-26T13:02:28.151887Z"
+     "end_time": "2025-07-26T14:11:23.888895Z",
+     "start_time": "2025-07-26T14:11:23.877921Z"
     }
    },
    "cell_type": "code",
@@ -97,8 +97,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:28.191426Z",
-     "start_time": "2025-07-26T13:02:28.186637Z"
+     "end_time": "2025-07-26T14:11:23.939630Z",
+     "start_time": "2025-07-26T14:11:23.932333Z"
     }
    },
    "cell_type": "code",
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:28.681987Z",
-     "start_time": "2025-07-26T13:02:28.210705Z"
+     "end_time": "2025-07-26T14:11:24.679248Z",
+     "start_time": "2025-07-26T14:11:23.974646Z"
     }
    },
    "cell_type": "code",
@@ -161,8 +161,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:28.748065Z",
-     "start_time": "2025-07-26T13:02:28.694303Z"
+     "end_time": "2025-07-26T14:11:24.802579Z",
+     "start_time": "2025-07-26T14:11:24.717995Z"
     }
    },
    "cell_type": "code",
@@ -195,8 +195,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:28.823027Z",
-     "start_time": "2025-07-26T13:02:28.764486Z"
+     "end_time": "2025-07-26T14:11:24.900030Z",
+     "start_time": "2025-07-26T14:11:24.835497Z"
     }
    },
    "cell_type": "code",
@@ -325,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:28.876492Z",
-     "start_time": "2025-07-26T13:02:28.851780Z"
+     "end_time": "2025-07-26T14:11:24.957046Z",
+     "start_time": "2025-07-26T14:11:24.929342Z"
     }
    },
    "cell_type": "code",
@@ -398,8 +398,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:29.085221Z",
-     "start_time": "2025-07-26T13:02:28.917Z"
+     "end_time": "2025-07-26T14:11:25.232031Z",
+     "start_time": "2025-07-26T14:11:25.011475Z"
     }
    },
    "cell_type": "code",
@@ -486,8 +486,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:29.157168Z",
-     "start_time": "2025-07-26T13:02:29.134243Z"
+     "end_time": "2025-07-26T14:11:25.340895Z",
+     "start_time": "2025-07-26T14:11:25.316261Z"
     }
    },
    "cell_type": "code",
@@ -548,8 +548,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:29.217691Z",
-     "start_time": "2025-07-26T13:02:29.211120Z"
+     "end_time": "2025-07-26T14:11:25.422019Z",
+     "start_time": "2025-07-26T14:11:25.412792Z"
     }
    },
    "cell_type": "code",
@@ -578,8 +578,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:29.412616Z",
-     "start_time": "2025-07-26T13:02:29.269571Z"
+     "end_time": "2025-07-26T14:11:25.680440Z",
+     "start_time": "2025-07-26T14:11:25.501371Z"
     }
    },
    "cell_type": "code",
@@ -647,8 +647,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.04690384864807129\n",
-      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.08118557929992676\n",
+      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.06284475326538086\n",
+      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.09726881980895996\n",
       "Stiffness matrix from 1-point Gauss quadrature (K_gauss_1pt):\n",
       "[[3.411447 1.893011 -2.791184 -0.805537 -0.898173 -1.087474]\n",
       " [1.893011 3.624915 -1.329135 -0.805537 -0.926367 -2.819378]\n",
@@ -681,8 +681,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:32.307097Z",
-     "start_time": "2025-07-26T13:02:29.490536Z"
+     "end_time": "2025-07-26T14:11:29.029716Z",
+     "start_time": "2025-07-26T14:11:25.767655Z"
     }
    },
    "cell_type": "code",
@@ -716,8 +716,8 @@
     "# K_e is the stiffness matrix calculated using method 3 from the book\n",
     "# K_integrated is the stiffness matrix calculated by performing a double integration over the element's physical\n",
     "\n",
-    "K_integrated_np = np.array(K_integrated).astype(np.float64)\n",
-    "ratio = K_gauss_3pt / K_integrated_np\n",
+    "K_integrated_np = np.asarray(K_integrated.evalf().applyfunc(lambda x: round(x/1e12, 6)))\n",
+    "# ratio = K_gauss_3pt / K_integrated_np\n",
     "# for i in range(ratio.shape[0]):\n",
     "#     for j in range(ratio.shape[1]):\n",
     "#         print(f'Element ({i},{j}):', round(ratio[i, j], 6))\n"
@@ -728,7 +728,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to calculate the stiffness matrix by double integration: 2.772909164428711\n",
+      "Time taken to calculate the stiffness matrix by double integration: 3.1757895946502686\n",
       "The fully integrated stiffness matrix K is:\n",
       "⎡3.4274    1.893   -2.7986  -0.8055  -0.9043  -1.0875⎤\n",
       "⎢                                                    ⎥\n",
@@ -749,8 +749,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:32.392801Z",
-     "start_time": "2025-07-26T13:02:32.314083Z"
+     "end_time": "2025-07-26T14:11:29.196744Z",
+     "start_time": "2025-07-26T14:11:29.107429Z"
     }
    },
    "cell_type": "code",
@@ -808,34 +808,56 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T13:02:32.549764Z",
-     "start_time": "2025-07-26T13:02:32.540343Z"
+     "end_time": "2025-07-26T14:11:29.303724Z",
+     "start_time": "2025-07-26T14:11:29.287728Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# the stiffness matrix as a numpy array\n",
-    "K_np = np.array(K_e).astype(np.float64)\n",
     "\n",
-    "# the eigenvalues\n",
-    "eigenvalues, eigenvectors = np.linalg.eigh(K_np)\n",
+    "def eigen(K):\n",
+    "    \"\"\"\n",
+    "    Calculate the eigenvalues and eigenvectors of the stiffness matrix K.\n",
+    "    \"\"\"\n",
+    "    # Convert the stiffness matrix to a numpy array\n",
+    "    K_np = np.array(K).astype(np.float64)\n",
+    "\n",
+    "    # the eigenvalues\n",
+    "    eigenvalues, eigenvectors = np.linalg.eigh(K_np)\n",
+    "    eigenvalues = sorted([float(x) for x in eigenvalues])\n",
+    "    eigenvalues = [round(ev, 5) for ev in eigenvalues]\n",
+    "    print('The eigenvalues of the stiffness matrix K are: {}'.format(eigenvalues))\n",
+    "\n",
+    "    # print([round(ev, 5) for ev in eigenvalues])\n",
+    "    # print(eigenvectors.shape)\n",
+    "    # sp.pprint(eigenvectors)\n",
+    "\n",
+    "    # # the eigenvectors for the near-zero eigenvalues\n",
+    "    # nearzero_eigenvalues = [ev for ev in eigenvalues if abs(ev) < 1e-10]\n",
+    "    # # printing the eigenvectors for the near-zero eigenvalues\n",
+    "    # print('The eigenvectors for the near-zero eigenvalues are:')\n",
+    "    # for i, ev in enumerate(nearzero_eigenvalues):\n",
+    "    #     print(f'Eigenvalue {i + 1}: {ev:.6f}')\n",
+    "    #     # print('Eigenvector:')\n",
+    "    #     # print(eigenvectors[:, i])\n",
+    "    print()\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"Eigenvalues and eigenvectors for the stiffness matrix K_gauss_1pt:\")\n",
+    "eigen(K_gauss_1pt)\n",
+    "print(\"Eigenvalues and eigenvectors for the stiffness matrix K_gauss_3pt:\")\n",
+    "eigen(K_gauss_3pt)\n",
+    "print(\"Eigenvalues and eigenvectors for the stiffness matrix K_integrated:\")\n",
+    "eigen(K_integrated_np)\n",
+    "\n",
+    "print(K_gauss_1pt / K_gauss_3pt)\n",
     "print()\n",
-    "print('The eigenvalues of the stiffness matrix K are:')\n",
-    "eigenvalues = sorted([float(x) for x in eigenvalues])\n",
+    "print(K_gauss_1pt / K_integrated_np)\n",
+    "print()\n",
+    "print(K_gauss_3pt / K_integrated_np)\n",
     "\n",
-    "print([round(ev, 5) for ev in eigenvalues])\n",
-    "# print(eigenvectors.shape)\n",
-    "# sp.pprint(eigenvectors)\n",
-    "\n",
-    "# the eigenvectors for the near-zero eigenvalues\n",
-    "nearzero_eigenvalues = [ev for ev in eigenvalues if abs(ev) < 1e-10]\n",
-    "# printing the eigenvectors for the near-zero eigenvalues\n",
-    "print('The eigenvectors for the near-zero eigenvalues are:')\n",
-    "for i, ev in enumerate(nearzero_eigenvalues):\n",
-    "    print(f'Eigenvalue {i + 1}: {ev:.6f}')\n",
-    "    print('Eigenvector:')\n",
-    "    print(eigenvectors[:, i])\n",
-    "    print()"
+    "\n"
    ],
    "id": "974b1fe355981d1a",
    "outputs": [
@@ -843,10 +865,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Eigenvalues and eigenvectors for the stiffness matrix K_gauss_1pt:\n",
+      "The eigenvalues of the stiffness matrix K are: [-0.0, 0.0, 0.0626, 2.13099, 3.22215, 9.1685]\n",
       "\n",
-      "The eigenvalues of the stiffness matrix K are:\n",
-      "[1e-05, 0.00094, 62602593973.32908, 2130987346601.4143, 3222146311374.145, 9168503489908.346]\n",
-      "The eigenvectors for the near-zero eigenvalues are:\n"
+      "Eigenvalues and eigenvectors for the stiffness matrix K_gauss_3pt:\n",
+      "The eigenvalues of the stiffness matrix K are: [0.0, 0.01079, 0.06332, 2.1416, 3.2325, 9.17893]\n",
+      "\n",
+      "Eigenvalues and eigenvectors for the stiffness matrix K_integrated:\n",
+      "The eigenvalues of the stiffness matrix K are: [0.0, 0.01076, 0.06333, 2.14161, 3.23259, 9.17897]\n",
+      "\n",
+      "[[0.9953359 1.000000 0.9973968 1.00000 0.993064 1.000000]\n",
+      " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
+      " [0.9973968 1.000000 0.9964753 nan 1.05139 1.000000]\n",
+      " [1.00000 1.00000 nan 1.00000 1.00000 nan]\n",
+      " [0.993064 1.00000 1.05139 1.00000 0.981187 1.00000]\n",
+      " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n",
+      "\n",
+      "[[0.9953408 1.000000 0.9973587 1.00000 0.993240 1.000000]\n",
+      " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
+      " [0.9973587 1.000000 0.9964236 nan 1.05219 1.000000]\n",
+      " [1.00000 1.00000 nan 1.00000 1.00000 nan]\n",
+      " [0.993240 1.00000 1.05219 1.00000 0.981206 1.00000]\n",
+      " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n",
+      "\n",
+      "[[1.000005 1.000000 0.9999618 1.00000 1.00018 1.000000]\n",
+      " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
+      " [0.9999618 1.000000 0.9999481 nan 1.00076 1.000000]\n",
+      " [1.00000 1.00000 nan 1.00000 1.00000 nan]\n",
+      " [1.00018 1.00000 1.00076 1.00000 1.00002 1.00000]\n",
+      " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n"
      ]
     }
    ],
