isoparametric works well for the quad element, is off by x2 for the tri. Other than that, they are OK.

--- a/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
@@ -4,9 +4,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Chapter 9: 2D axissymmetric tri element\n",
+    "### Chapter 9: 2D axissymmetric isoparametric tri element\n",
     "\n",
-    "Isoparametric formulation"
+    "Additionally: Dr. Szekrényes András, Chapter 13 for the quadratic element."
    ],
    "id": "b51ca543c8634a14"
   },
@@ -64,7 +64,7 @@
     "ND = 2  # number of degrees of freedom per node\n",
     "NNODE = 4  # number of nodes\n",
     "if NNODE == 3:\n",
-    "    NGS = [1, 3]  # f\n",
+    "    NGS = [1, 3]  # number of Gauss points, can be 1, 3\n",
     "elif NNODE == 4:\n",
     "    NGS = [1, 4]  # number of Gauss points, can be 1, 2, 3, 4, 5, or 6\n",
     "else:\n",
