--- a/source/TwoD/Axissymmetric/tri_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/tri_axissymmetric.ipynb
@@ -7,7 +7,7 @@
     "# Chapter 9: 2D axissymmetric tri element\n",
     "Daryl Logan: A first course in the finite element method, 6th edition, 2020, Chapter 9.\n",
     "\n",
-    "Note: This is not an isoparametric formulation and the way the stiffenss matrix is calculated at the end is also not the best."
+    "Note: This is not an isoparametric formulation."
    ],
    "id": "534b31014bca533"
   },
