--- a/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:02.157620Z",
-     "start_time": "2025-07-26T14:57:02.140192Z"
+     "end_time": "2025-07-27T15:16:56.880362Z",
+     "start_time": "2025-07-27T15:16:56.349231Z"
     }
    },
    "source": [
@@ -26,7 +26,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 138
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:02.344303Z",
-     "start_time": "2025-07-26T14:57:02.337984Z"
+     "end_time": "2025-07-27T15:16:56.898173Z",
+     "start_time": "2025-07-27T15:16:56.892120Z"
     }
    },
    "cell_type": "code",
@@ -72,13 +72,13 @@
    ],
    "id": "22782e538a273616",
    "outputs": [],
-   "execution_count": 139
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:02.551187Z",
-     "start_time": "2025-07-26T14:57:02.537739Z"
+     "end_time": "2025-07-27T15:16:56.941836Z",
+     "start_time": "2025-07-27T15:16:56.927696Z"
     }
    },
    "cell_type": "code",
@@ -152,7 +152,7 @@
    ],
    "id": "643385d13f951946",
    "outputs": [],
-   "execution_count": 140
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -163,8 +163,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:02.753211Z",
-     "start_time": "2025-07-26T14:57:02.746304Z"
+     "end_time": "2025-07-27T15:16:56.962060Z",
+     "start_time": "2025-07-27T15:16:56.955704Z"
     }
    },
    "cell_type": "code",
@@ -181,7 +181,7 @@
    ],
    "id": "7cdadabf1b8538b3",
    "outputs": [],
-   "execution_count": 141
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -192,8 +192,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:03.001916Z",
-     "start_time": "2025-07-26T14:57:02.956310Z"
+     "end_time": "2025-07-27T15:16:57.073333Z",
+     "start_time": "2025-07-27T15:16:56.985570Z"
     }
    },
    "cell_type": "code",
@@ -318,7 +318,7 @@
      ]
     }
    ],
-   "execution_count": 142
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -339,8 +339,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:03.254304Z",
-     "start_time": "2025-07-26T14:57:03.211653Z"
+     "end_time": "2025-07-27T15:16:57.276561Z",
+     "start_time": "2025-07-27T15:16:57.097996Z"
     }
    },
    "cell_type": "code",
@@ -406,7 +406,7 @@
      ]
     }
    ],
-   "execution_count": 143
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -417,8 +417,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:03.485115Z",
-     "start_time": "2025-07-26T14:57:03.442383Z"
+     "end_time": "2025-07-27T15:16:57.363109Z",
+     "start_time": "2025-07-27T15:16:57.310277Z"
     }
    },
    "cell_type": "code",
@@ -498,46 +498,27 @@
      ]
     }
    ],
-   "execution_count": 144
+   "execution_count": 8
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### $\\begin{bmatrix}B\\end{bmatrix}$ matrix\n",
-    "\n",
-    "$$\\begin{bmatrix}B_i\\end{bmatrix} = \\begin{bmatrix}\n",
-    "\\frac{\\partial N_i}{\\partial r} & 0 \\\\\n",
-    "\\frac{N_i}{r} & 0 \\\\\n",
-    "0 & \\frac{\\partial N_i}{\\partial z} \\\\\n",
-    "\\frac{\\partial N_i}{\\partial z} & \\frac{\\partial N_i}{\\partial r} \\\\\n",
-    "\\end{bmatrix}$$\n",
-    "\n",
-    "One block of the B matrix, which relates the strain to the displacement for node i.\n",
-    "\n",
-    "The order of the strain vector is:\n",
-    "$$\\varepsilon = \\begin{bmatrix}\n",
-    "\\varepsilon_r \\\\\n",
-    "\\varepsilon_\\theta\\\\\n",
-    "\\varepsilon_z \\\\\n",
-    "\\gamma_{rz} \\\\\n",
-    "\\end{bmatrix}$$"
-   ],
-   "id": "9f3504c1cd2d518b"
+   "source": "### The $\\begin{bmatrix}B\\end{bmatrix}$ matrix",
+   "id": "db47ae9de1cb6730"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:03.892212Z",
-     "start_time": "2025-07-26T14:57:03.679160Z"
+     "end_time": "2025-07-27T15:31:04.996867Z",
+     "start_time": "2025-07-27T15:31:04.900052Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def calculate_B():\n",
     "    \"\"\"\n",
-    "    Calculates the complete B-matrix for the element.\n",
-    "    B relates the strain vector [ε_r, ε_z, γ_rz, ε_θ] to the nodal displacement vector.\n",
+    "    Calculates the complete BA-matrix for the element.\n",
+    "    B relates the strain vector [ε_r, ε_θ, ε_z, γ_zr] to the nodal displacement vector.\n",
     "    \"\"\"\n",
     "    J_symbolic = jacobian()\n",
     "    J_det_symbolic = J_symbolic.det()\n",
@@ -558,11 +539,11 @@
     "        # ∂Nᵢ/∂z = (1/|J|) * [ (∂r/∂R * ∂Nᵢ/∂Z) - (∂z/∂R * ∂Nᵢ/∂R) ]\n",
     "        dNi_dz = (1/J_det_symbolic) * (sp.diff(x_map, R) * dNdz[i] - sp.diff(y_map, R) * dNdr[i])\n",
     "\n",
-    "        B[0, 2*i] = dNi_dr\n",
-    "        B[1, 2*i] = N_funcs[i] / r_iso\n",
-    "        B[2, 2*i+1] = dNi_dz\n",
-    "        B[3, 2*i] = dNi_dz\n",
-    "        B[3, 2*i+1] = dNi_dr\n",
+    "        B[0, ND*i] = dNi_dr\n",
+    "        B[1, ND*i] = N_funcs[i] / r_iso\n",
+    "        B[2, ND*i+1] = dNi_dz\n",
+    "        B[3, ND*i] = dNi_dz\n",
+    "        B[3, ND*i+1] = dNi_dr\n",
     "\n",
     "    return B\n",
     "\n",
@@ -570,7 +551,7 @@
     "B_matrix = calculate_B()\n",
     "# You can then substitute values as needed\n",
     "B_evaluated = B_matrix.subs(physical_coords_map).subs({R: 1/3, Z: 1/3})\n",
-    "sp.pprint(B_evaluated.evalf().applyfunc(lambda x: round(x, 4)))"
+    "sp.pprint(B_evaluated.evalf().applyfunc(lambda x: round(x, 3)))"
    ],
    "id": "3356c7d2c4a65610",
    "outputs": [
@@ -578,17 +559,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⎡-3.7037     0      3.7037      0      7.4074      0     -7.4074     0   ⎤\n",
-      "⎢                                                                        ⎥\n",
-      "⎢0.6536      0      1.3072      0      2.6144      0     1.3072      0   ⎥\n",
-      "⎢                                                                        ⎥\n",
-      "⎢   0     -8.3333     0      -16.6667     0     16.6667     0     8.3333 ⎥\n",
-      "⎢                                                                        ⎥\n",
-      "⎣-8.3333  -3.7037  -16.6667   3.7037   16.6667  7.4074   8.3333   -7.4074⎦\n"
+      "⎡-3.704    0      3.704      0     7.407     0     -7.407    0   ⎤\n",
+      "⎢                                                                ⎥\n",
+      "⎢0.654     0      1.307      0     2.614     0     1.307     0   ⎥\n",
+      "⎢                                                                ⎥\n",
+      "⎢  0     -8.333     0     -16.667    0     16.667    0     8.333 ⎥\n",
+      "⎢                                                                ⎥\n",
+      "⎣-8.333  -3.704  -16.667   3.704   16.667  7.407   8.333   -7.407⎦\n"
      ]
     }
    ],
-   "execution_count": 145
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -612,8 +593,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:04.111088Z",
-     "start_time": "2025-07-26T14:57:04.085501Z"
+     "end_time": "2025-07-27T15:16:57.661370Z",
+     "start_time": "2025-07-27T15:16:57.640496Z"
     }
    },
    "cell_type": "code",
@@ -663,7 +644,7 @@
      ]
     }
    ],
-   "execution_count": 146
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -674,8 +655,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:04.304742Z",
-     "start_time": "2025-07-26T14:57:04.294972Z"
+     "end_time": "2025-07-27T15:16:57.992747Z",
+     "start_time": "2025-07-27T15:16:57.981156Z"
     }
    },
    "cell_type": "code",
@@ -725,7 +706,7 @@
    ],
    "id": "921a4b0f9b91c935",
    "outputs": [],
-   "execution_count": 147
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -736,8 +717,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:06.641682Z",
-     "start_time": "2025-07-26T14:57:04.496294Z"
+     "end_time": "2025-07-27T15:16:59.686426Z",
+     "start_time": "2025-07-27T15:16:58.162413Z"
     }
    },
    "cell_type": "code",
@@ -828,13 +809,13 @@
      ]
     }
    ],
-   "execution_count": 148
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:57:06.687283Z",
-     "start_time": "2025-07-26T14:57:06.660384Z"
+     "end_time": "2025-07-27T15:16:59.924716Z",
+     "start_time": "2025-07-27T15:16:59.883082Z"
     }
    },
    "cell_type": "code",
@@ -891,7 +872,7 @@
      ]
     }
    ],
-   "execution_count": 149
+   "execution_count": 13
   }
  ],
  "metadata": {
