general axisymmetric element

--- a/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:56.880362Z",
-     "start_time": "2025-07-27T15:16:56.349231Z"
+     "end_time": "2025-07-27T19:37:24.403023Z",
+     "start_time": "2025-07-27T19:37:24.397667Z"
     }
    },
    "source": [
@@ -26,7 +26,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 64
   },
   {
    "metadata": {},
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:56.898173Z",
-     "start_time": "2025-07-27T15:16:56.892120Z"
+     "end_time": "2025-07-27T19:37:24.610162Z",
+     "start_time": "2025-07-27T19:37:24.603880Z"
     }
    },
    "cell_type": "code",
@@ -72,13 +72,13 @@
    ],
    "id": "22782e538a273616",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 65
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:56.941836Z",
-     "start_time": "2025-07-27T15:16:56.927696Z"
+     "end_time": "2025-07-27T19:37:24.809254Z",
+     "start_time": "2025-07-27T19:37:24.796007Z"
     }
    },
    "cell_type": "code",
@@ -152,7 +152,7 @@
    ],
    "id": "643385d13f951946",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 66
   },
   {
    "metadata": {},
@@ -163,8 +163,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:56.962060Z",
-     "start_time": "2025-07-27T15:16:56.955704Z"
+     "end_time": "2025-07-27T19:37:25.001374Z",
+     "start_time": "2025-07-27T19:37:24.994539Z"
     }
    },
    "cell_type": "code",
@@ -181,7 +181,7 @@
    ],
    "id": "7cdadabf1b8538b3",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 67
   },
   {
    "metadata": {},
@@ -192,8 +192,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:57.073333Z",
-     "start_time": "2025-07-27T15:16:56.985570Z"
+     "end_time": "2025-07-27T19:37:25.248866Z",
+     "start_time": "2025-07-27T19:37:25.201113Z"
     }
    },
    "cell_type": "code",
@@ -318,7 +318,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 68
   },
   {
    "metadata": {},
@@ -339,8 +339,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:57.276561Z",
-     "start_time": "2025-07-27T15:16:57.097996Z"
+     "end_time": "2025-07-27T19:37:25.474699Z",
+     "start_time": "2025-07-27T19:37:25.437469Z"
     }
    },
    "cell_type": "code",
@@ -406,7 +406,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 69
   },
   {
    "metadata": {},
@@ -417,8 +417,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:57.363109Z",
-     "start_time": "2025-07-27T15:16:57.310277Z"
+     "end_time": "2025-07-27T19:38:54.414288Z",
+     "start_time": "2025-07-27T19:38:54.391399Z"
     }
    },
    "cell_type": "code",
@@ -457,7 +457,7 @@
     "        J_evaluated = J_substituted.subs({R: r_eval, Z: z_eval})\n",
     "        print(f'Jacobian matrix at r={r_eval}, z={z_eval}:')\n",
     "        sp.pprint(J_evaluated)\n",
-    "        print(f'The determinant at this point is |J|={J_evaluated.det():.2f}')\n",
+    "        print(f'The determinant at this point is |J|={J_evaluated.det():.2g}')\n",
     "        print()"
    ],
    "id": "234cd282ee60e02e",
@@ -475,30 +475,30 @@
       "⎡0.045  3.46944695195361e-18⎤\n",
       "⎢                           ⎥\n",
       "⎣  0            0.02        ⎦\n",
-      "The determinant at this point is |J|=0.00\n",
+      "The determinant at this point is |J|=0.00090\n",
       "\n",
       "Jacobian matrix at r=0, z=0.3333:\n",
       "⎡0.045  3.46944695195361e-18⎤\n",
       "⎢                           ⎥\n",
       "⎣  0            0.02        ⎦\n",
-      "The determinant at this point is |J|=0.00\n",
+      "The determinant at this point is |J|=0.00090\n",
       "\n",
       "Jacobian matrix at r=0.3333, z=0:\n",
       "⎡0.045  3.46944695195361e-18⎤\n",
       "⎢                           ⎥\n",
       "⎣  0            0.02        ⎦\n",
-      "The determinant at this point is |J|=0.00\n",
+      "The determinant at this point is |J|=0.00090\n",
       "\n",
       "Jacobian matrix at r=0.3333, z=0.3333:\n",
       "⎡0.045  3.46944695195361e-18⎤\n",
       "⎢                           ⎥\n",
       "⎣  0            0.02        ⎦\n",
-      "The determinant at this point is |J|=0.00\n",
+      "The determinant at this point is |J|=0.00090\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 77
   },
   {
    "metadata": {},
@@ -509,8 +509,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:31:04.996867Z",
-     "start_time": "2025-07-27T15:31:04.900052Z"
+     "end_time": "2025-07-27T19:38:34.898883Z",
+     "start_time": "2025-07-27T19:38:34.816120Z"
     }
    },
    "cell_type": "code",
@@ -569,7 +569,7 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 76
   },
   {
    "metadata": {},
@@ -593,8 +593,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:57.661370Z",
-     "start_time": "2025-07-27T15:16:57.640496Z"
+     "end_time": "2025-07-27T19:37:26.322371Z",
+     "start_time": "2025-07-27T19:37:26.295186Z"
     }
    },
    "cell_type": "code",
@@ -644,7 +644,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 72
   },
   {
    "metadata": {},
@@ -655,8 +655,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:57.992747Z",
-     "start_time": "2025-07-27T15:16:57.981156Z"
+     "end_time": "2025-07-27T19:37:26.514164Z",
+     "start_time": "2025-07-27T19:37:26.502604Z"
     }
    },
    "cell_type": "code",
@@ -706,7 +706,7 @@
    ],
    "id": "921a4b0f9b91c935",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 73
   },
   {
    "metadata": {},
@@ -717,8 +717,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:59.686426Z",
-     "start_time": "2025-07-27T15:16:58.162413Z"
+     "end_time": "2025-07-27T19:37:28.371229Z",
+     "start_time": "2025-07-27T19:37:26.707505Z"
     }
    },
    "cell_type": "code",
@@ -809,13 +809,13 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 74
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T15:16:59.924716Z",
-     "start_time": "2025-07-27T15:16:59.883082Z"
+     "end_time": "2025-07-27T19:37:28.645565Z",
+     "start_time": "2025-07-27T19:37:28.613855Z"
     }
    },
    "cell_type": "code",
@@ -872,7 +872,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 75
   }
  ],
  "metadata": {
